examples/test/testpolicy18655.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18655
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key41: value9
      key21: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value43
          key16: value33
          key6: value46
      podSelector:
        matchLabels:
          key19: value45
